--- a/popup.html
+++ b/popup.html
@@ -1,30 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta charset="UTF-8">
-	<style type="text/css">
-		*{
-			margin: 0px;
-		}
-		.like-btn{
-			background-color: #0f0;
-			color: while;
-			border: none;
-			font-size: 15px;
-			padding: 5px 10px;
-			min-width: 100%;
-		}
-		p{
-			font-size: 16px;
-			text-align: center;
-		}
-	</style>
+<link rel="stylesheet" type="text/css"  href="style/style.css">
+	
 <body style="width: 200px">
-	<p id="txt">Tìm thấy <b id="number_like">X</b> mục để &nbsp;&nbsp;&nbsp;like</p>
-	<button class="like-btn" id="like-btn"">Like All</button>
-
+<div style="padding: 1px; border: 6px double #8A2BE2; word-wrap: break-word;"><p id="txt">Tìm thấy <b id="number_like">X</b> mục để like</p>
+	<button class="like-btn" id="like-btn""><span>Like All</span></button>
+	
+	<hr>
 
 	<p id="untxt">Tìm thấy <b id="number_unlike">X</b> mục để unlike</p>
-	<button class="like-btn" id="unlike-btn"">UnLike All</button>
+	<button class="like-btn" id="unlike-btn""><span>UnLike All</span></button></div>
+	
 
 	<script src="js/jquery.js"></script>
 	<script src="js/popup.js"></script>
