Change style button

--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,7 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" type="text/css"  href="style/style.css">
 	
-<body link="red" style="width: 200px">
+<body style="width: 200px">
 
 
 
@@ -33,10 +33,10 @@
     	</div>
 	</div>
     <div class="tab-links">
-        <a href="#tab1"><span>FB</span></a>
-        <a href="#tab2"><span>Tab #2</a></span>
-        <a href="#tab3"><span>Tab #3</span></a>
-        <a href="#tab4"><span>Tab #4</span></a>
+        <button flag="#tab1" class="cc active">FB</button>
+        <button flag="#tab2" class="cc">Tab #2</button>
+        <button flag="#tab3" class="cc">Tab #3</button>
+        <button flag="#tab4" class="cc">Tab #4</button>
     </div>
 </div>
 	
