Add FAB in phimbathu.com, fixed onResize.

--- a/popup.html
+++ b/popup.html
@@ -1,47 +1,53 @@
-<!DOCTYPE html>
-<html lang="en">
-<meta charset="UTF-8">
-<link rel="stylesheet" type="text/css"  href="style/style.css">
-	
-<body style="width: 200px">
+﻿<!DOCTYPE html>
+<html lang="vi">
 
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="css/popup.css">
+    <script src="js/jquery.js"></script>
+    <script src="js/popup.js"></script>
+    <script src="js/jscolor.min.js"></script>
+</head>
 
-
-
-<div class="tabs">
- 
-    <div class="tab-content">
-		<div id="tab1" class="tab active">
-			<div class="con-tab">
-				<p id="txt">Tìm thấy <b id="number_like">X</b> mục để like</p>
-				<button class="like-btn" id="like-btn""><span>Like All</span></button>
-    			<p id="untxt">Tìm thấy <b id="number_unlike">X</b> mục để unlike</p>
-    			<button class="like-btn" id="unlike-btn""><span>UnLike All</span></button>
-    		</div>
-    	</div>
- 
-    	<div id="tab2" class="tab">
-        	<div class="con-tab">Tab #2 content goes here!</div>
-    	</div>
-
-   	 	<div id="tab3" class="tab">
-        	<div class="con-tab">Tab #3 content goes here!</div>
-    	</div>
-
-    	<div id="tab4" class="tab">
-        	<div class="con-tab">Tab #4 content goes here!</div>
-    	</div>
-	</div>
-    <div class="tab-links">
-        <button flag="#tab1" class="cc active">FB</button>
-        <button flag="#tab2" class="cc">Tab #2</button>
-        <button flag="#tab3" class="cc">Tab #3</button>
-        <button flag="#tab4" class="cc">Tab #4</button>
+<body style="width: 250px">
+    <div class="tabs">
+        <div class="tab-content">
+            <div id="tab1" class="tab active">
+                <div class="con-tab">
+                    <p id="txt">Tìm thấy <b id="number_like">X</b> mục để like</p>
+                    <button class="like-btn" id="like-btn"><span>Like All</span></button>
+                    <p id="untxt ">Tìm thấy <b id="number_unlike">X</b> mục để unlike</p>
+                    <button class="like-btn " id="unlike-btn "><span>UnLike All</span></button>
+                </div>
+            </div>
+            <div id="tab2" class="tab">
+                <div class="con-tab">
+                    <div>
+                        <input type="text" flag="._3u6q ._2s1y" class="jscolor color-background" value="3b5998">
+                        <button type="submit" flag="._3u6q ._2s1y" class="reset-color" value="3b5998">Top Bar</button>
+                    </div>
+                    <div>
+                        <input type="submit" flag="._5vb_, ._5vb_ #contentCol" class="jscolor color-background" value="e9ebee"> </div>
+                    <div>
+                        <input type="submit" flag="._5vsj._5vsj._5vsj" class="jscolor color-background" value="f6f7f9"> </div>
+                    <div>
+                        <input type="submit" flag="._4-u8" class="jscolor color-background" value="ffffff"> </div>
+                </div>
+            </div>
+            <div id="tab3" class="tab">
+                <div class="con-tab">Tab #3 content goes here!</div>
+            </div>
+            <div id="tab4" class="tab">
+                <div class="con-tab">Tab #4 content goes here!</div>
+            </div>
+        </div>
+        <div class="tab-links">
+            <button flag="#tab1" class="cc active">FB</button>
+            <button flag="#tab2" class="cc">Theme</button>
+            <button flag="#tab3" class="cc">Tab #3</button>
+            <button flag="#tab4" class="cc">Tab #4</button>
+        </div>
     </div>
-</div>
-	
-
-	<script src="js/jquery.js"></script>
-	<script src="js/popup.js"></script>
 </body>
+
 </html>
