--- a/popup.html
+++ b/popup.html
@@ -1,53 +1,69 @@
-﻿<!DOCTYPE html>
+﻿<!doctype html>
 <html lang="vi">
-
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="css/popup.css">
-    <script src="js/jquery.js"></script>
-    <script src="js/popup.js"></script>
-    <script src="js/jscolor.min.js"></script>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/popup.css">
+    <title>Http Block</title>
 </head>
-
-<body style="width: 250px">
-    <div class="tabs">
-        <div class="tab-content">
-            <div id="tab1" class="tab active">
-                <div class="con-tab">
-                    <p id="txt">Tìm thấy <b id="number_like">X</b> mục để like</p>
-                    <button class="like-btn" id="like-btn"><span>Like All</span></button>
-                    <p id="untxt ">Tìm thấy <b id="number_unlike">X</b> mục để unlike</p>
-                    <button class="like-btn " id="unlike-btn"><span>UnLike All</span></button>
-                </div>
-            </div>
-            <div id="tab2" class="tab">
-                <div class="con-tab">
-                    <div>
-                        <input type="text" flag="._3u6q ._2s1y" class="jscolor color-background" value="3b5998">
-                        <button type="submit" flag="._3u6q ._2s1y" class="reset-color" value="3b5998">Top Bar</button>
-                    </div>
-                    <div>
-                        <input type="submit" flag="._5vb_, ._5vb_ #contentCol" class="jscolor color-background" value="e9ebee"> </div>
-                    <div>
-                        <input type="submit" flag="._5vsj._5vsj._5vsj" class="jscolor color-background" value="f6f7f9"> </div>
-                    <div>
-                        <input type="submit" flag="._4-u8" class="jscolor color-background" value="ffffff"> </div>
-                </div>
-            </div>
-            <div id="tab3" class="tab">
-                <div class="con-tab">Tab #3 content goes here!</div>
-            </div>
-            <div id="tab4" class="tab">
-                <div class="con-tab">Tab #4 content goes here!</div>
-            </div>
-        </div>
-        <div class="tab-links">
-            <button flag="#tab1" class="cc active">FB</button>
-            <button flag="#tab2" class="cc">Theme</button>
-            <button flag="#tab3" class="cc">Tab #3</button>
-            <button flag="#tab4" class="cc">Tab #4</button>
-        </div>
+<body>
+<div class="container">
+    <h4 class="text-center">Block request http(s)</h4>
+    <div class="blocked btn-group btn-group-justified">
+        <span class="enable btn btn-info"><i class="glyphicon glyphicon-check"></i></span>
+        <span class="import btn btn-default">
+            <i class="glyphicon glyphicon-import"></i>
+            <input class="file" type="file">
+        </span>
+        <span class="export btn btn-default">
+            <i class="glyphicon glyphicon-export"></i>
+        </span>
+        <span class="btn btn-success add"><i class="glyphicon glyphicon-plus-sign"></i></span>
     </div>
-</body>
+    <div class="list"></div>
+    <div class="btn-group btn-group-justified">
+        <span class="save btn btn-success" data-toggle="modal" data-target=".save-dialog"><i class="glyphicon glyphicon-save"></i></span>
+        <span class="removeall btn btn-danger" data-toggle="modal" data-target=".remove-dialog"><i class="glyphicon glyphicon-trash"></i></span>
+    </div>
+</div>
 
+<div class="modal fade save-dialog">
+    <div class="modal-dialog">
+
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Successfully Saved</h4>
+            </div>
+        </div>
+
+    </div>
+</div>
+<div class="modal fade remove-dialog">
+    <div class="modal-dialog">
+
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Warning</h4>
+            </div>
+            <div class="modal-body">
+                <p>Are you sure to delete?"</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary" data-dismiss="modal">No, thanks</button>
+                <button type="button" class="remove-all btn btn-danger" data-dismiss="modal">Yes, I sure</button>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+<script src="js/jquery.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/popup.js"></script>
+</body>
 </html>
