Add keyboard shortcuts to fb.com

--- a/popup.html
+++ b/popup.html
@@ -48,7 +48,11 @@
                 </span>
                 <span id="stopTimeline" class="checkbox btn btn-success">
                     <i class="col-xs-2 glyphicon glyphicon-check"></i>
-                    <div class="text-left" pattern='*://*.facebook.com/ajax/pagelet/generic.php/LitestandTailLoadPagelet*'>Stop your timeline</div>
+                    <div class="text-left">Stop your timeline</div>
+                </span>
+                <span id="stopGroup" class="checkbox btn btn-success">
+                    <i class="col-xs-2 glyphicon glyphicon-check"></i>
+                    <div class="text-left">Stop Feed in your Groups</div>
                 </span>
             </div>
         </div>
