Add import and export listBlock.txt

--- a/popup.html
+++ b/popup.html
@@ -22,8 +22,8 @@
                     <i class="glyphicon glyphicon-check"></i></span>
                 <span class="import btn btn-default">
                     <i class="glyphicon glyphicon-import"></i><input class="file" type="file"></span>
-                <span class="export btn btn-default">
-                    <i class="glyphicon glyphicon-export"></i></span>
+                <a class="export btn btn-default" download="blockList.json">
+                    <i class="glyphicon glyphicon-export"></i></a>
                 <span class="btn btn-success add"><i class="glyphicon glyphicon-plus-sign"></i></span>
             </div>
             <div class="list"></div>
