--- a/popup.html
+++ b/popup.html
@@ -21,8 +21,8 @@
                 <span id="isEnable" class="checkbox btn btn-success">
                     <i class="glyphicon glyphicon-check"></i></span>
                 <span class="import btn btn-default">
-                    <i class="glyphicon glyphicon-import"></i><input class="file" type="file"></span>
-                <a class="export btn btn-default" download="blockList.json">
+                    <i class="glyphicon glyphicon-import"></i><input class="file" type="file" accept="text/plain"></span>
+                <a class="export btn btn-default" download="blockList.txt">
                     <i class="glyphicon glyphicon-export"></i></a>
                 <span class="btn btn-success add"><i class="glyphicon glyphicon-plus-sign"></i></span>
             </div>
