Refact my source code

--- a/frame.html
+++ b/frame.html
@@ -3,15 +3,15 @@
 	<div class="btn-group">
 		<button class="reSize">
 			<svg height="100%" viewBox="0 0 16 16" width="100%" fill="#fff">
-				<path class="st0" d="M5.4,10.6C6,11.4,7,11.8,8,11.8c1.3,0,2.6-0.8,3.1-1.9c0.2-0.4,0.3-0.8,0.3-1.2c0-0.6-0.2-1.2-0.5-1.7c-0.2-0.3-0.5-0.6-0.8-0.8c0,0.2,0,0.4,0,0.6c0,0.5-0.1,1-0.3,1.5C9.4,9,8.9,9.6,8.2,10.1C7.4,10.6,6.3,10.8,5.4,10.6z"/>
-				<path class="st0" d="M13.4,6.8c0-1.3-0.8-2.4-2.1-2.9c-1-0.4-2.2-0.3-3.1,0.3C7.9,4.4,7.6,4.6,7.4,4.9c0.2,0,0.4,0,0.6,0c0.5,0,1,0.1,1.6,0.3c0.8,0.3,1.4,0.8,1.9,1.5c0.4,0.7,0.7,1.4,0.7,2.1c0,0.2,0,0.4,0,0.6C12.9,8.7,13.4,7.8,13.4,6.8z"/>
-				<path class="st0" d="M10.6,3C10,2.2,9.1,1.8,8,1.8c-1.4,0-2.6,0.8-3.1,1.9C4.7,4.1,4.6,4.5,4.6,4.9c0,0.6,0.2,1.2,0.5,1.7C5.4,6.9,5.7,7.2,6,7.4c0-0.2,0-0.4,0-0.6c0-0.5,0.1-1,0.3-1.5C6.6,4.6,7.1,4,7.8,3.6C8.6,3,9.7,2.8,10.6,3z"/>
-				<path class="st0" d="M6.4,8.5C5.7,8.2,5,7.7,4.6,7C4.1,6.4,3.9,5.7,3.9,4.9c0-0.2,0-0.4,0-0.6C3.1,4.9,2.6,5.8,2.6,6.8c0,1.3,0.8,2.4,2.1,2.9c0.9,0.4,2.2,0.3,3.1-0.3C8.1,9.2,8.4,9,8.6,8.8C7.9,8.9,7.1,8.8,6.4,8.5z"/>
+				<path d="M5.4,10.6C6,11.4,7,11.8,8,11.8c1.3,0,2.6-0.8,3.1-1.9c0.2-0.4,0.3-0.8,0.3-1.2c0-0.6-0.2-1.2-0.5-1.7c-0.2-0.3-0.5-0.6-0.8-0.8c0,0.2,0,0.4,0,0.6c0,0.5-0.1,1-0.3,1.5C9.4,9,8.9,9.6,8.2,10.1C7.4,10.6,6.3,10.8,5.4,10.6z"></path>
+				<path d="M13.4,6.8c0-1.3-0.8-2.4-2.1-2.9c-1-0.4-2.2-0.3-3.1,0.3C7.9,4.4,7.6,4.6,7.4,4.9c0.2,0,0.4,0,0.6,0c0.5,0,1,0.1,1.6,0.3c0.8,0.3,1.4,0.8,1.9,1.5c0.4,0.7,0.7,1.4,0.7,2.1c0,0.2,0,0.4,0,0.6C12.9,8.7,13.4,7.8,13.4,6.8z"></path>
+				<path d="M10.6,3C10,2.2,9.1,1.8,8,1.8c-1.4,0-2.6,0.8-3.1,1.9C4.7,4.1,4.6,4.5,4.6,4.9c0,0.6,0.2,1.2,0.5,1.7C5.4,6.9,5.7,7.2,6,7.4c0-0.2,0-0.4,0-0.6c0-0.5,0.1-1,0.3-1.5C6.6,4.6,7.1,4,7.8,3.6C8.6,3,9.7,2.8,10.6,3z"></path>
+				<path d="M6.4,8.5C5.7,8.2,5,7.7,4.6,7C4.1,6.4,3.9,5.7,3.9,4.9c0-0.2,0-0.4,0-0.6C3.1,4.9,2.6,5.8,2.6,6.8c0,1.3,0.8,2.4,2.1,2.9c0.9,0.4,2.2,0.3,3.1-0.3C8.1,9.2,8.4,9,8.6,8.8C7.9,8.9,7.1,8.8,6.4,8.5z"></path>
 			</svg>
 		</button>
 		<button class="zoom" zoom="out">
 			<svg height="100%" viewBox="0 0 16 16" width="100%" fill="#fff">
-				<path d="M2.6,9c3.3,1.1,6.5,2.2,9.8,3.3C11.7,10.9,9.2,4,8.7,2.3C8.5,3.5,8.2,4.7,8,5.9c1.2,1,1.4,2.4,0.9,3c-0.5,0.5-1.9,0.5-3-0.6C4.8,8.6,3.7,8.8,2.6,9z"/>
+				<path d="M2.6,9c3.3,1.1,6.5,2.2,9.8,3.3C11.7,10.9,9.2,4,8.7,2.3C8.5,3.5,8.2,4.7,8,5.9c1.2,1,1.4,2.4,0.9,3c-0.5,0.5-1.9,0.5-3-0.6C4.8,8.6,3.7,8.8,2.6,9z"></path>
 			</svg>
 		</button>
 		<button class="close-video">
@@ -21,4 +21,3 @@
 		</button>
 	</div>
 </div>
-
