--- a/popup.html
+++ b/popup.html
@@ -2,9 +2,6 @@
 <html lang="vi">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/popup.css">
     <title>Http Block</title>
@@ -35,7 +32,7 @@
         <div id="option" class="tab-pane fade in active">
             <div class="panel-body btn-group-vertical">
                 <div class="input-group form-group">
-                    <input type="text" id="ringtone" class="form-control" value="">
+                    <input type="text" id="ringtone" class="form-control" value="" title="Url to your ringtone">
                     <span class="default-music input-group-addon btn btn-primary">
                         <i class="glyphicon glyphicon-repeat"></i>
                     </span>
@@ -45,23 +42,23 @@
                 </div>
                 <span id="seenChat" class="checkbox btn btn-success">
                     <i class="col-xs-2 glyphicon glyphicon-check"></i>
-                    <div class="text-left">Block the "seen" of Messenger</div>
+                    <span class="text-left">Block the "seen" of Messenger</span>
                 </span>
                 <span id="typingChat" class="checkbox btn btn-success">
                     <i class="col-xs-2 glyphicon glyphicon-check"></i>
-                    <div class="text-left">Block the typing indicator of Messenger</div>
+                    <span class="text-left">Block the typing indicator of Messenger</span>
                 </span>
                 <span id="typingPost" class="checkbox btn btn-success">
                     <i class="col-xs-2 glyphicon glyphicon-check"></i>
-                    <div class="text-left">Block the typing indicator on Post</div>
+                    <span class="text-left">Block the typing indicator on Post</span>
                 </span>
                 <span id="stopTimeline" class="checkbox btn btn-success">
                     <i class="col-xs-2 glyphicon glyphicon-check"></i>
-                    <div class="text-left">Stop your timeline</div>
+                    <span class="text-left">Stop your timeline</span>
                 </span>
                 <span id="stopGroup" class="checkbox btn btn-success">
                     <i class="col-xs-2 glyphicon glyphicon-check"></i>
-                    <div class="text-left">Stop Feed in your Groups</div>
+                    <span class="text-left">Stop Feed in your Groups</span>
                 </span>
             </div>
         </div>
