--- a/popup.html
+++ b/popup.html
@@ -25,8 +25,12 @@
             </div>
             <div class="list"></div>
             <div class="btn-group btn-group-justified">
-                <span class="save btn btn-success" data-toggle="modal" data-target=".save-dialog"><i class="glyphicon glyphicon-save"></i></span>
-                <span class="removeall btn btn-danger" data-toggle="modal" data-target=".remove-dialog"><i class="glyphicon glyphicon-trash"></i></span>
+                <span class="save btn btn-success" data-toggle="modal" data-target=".save-dialog">
+                    <i class="glyphicon glyphicon-save"></i>
+                </span>
+                <span class="removeall btn btn-danger" data-toggle="modal" data-target=".remove-dialog">
+                    <i class="glyphicon glyphicon-trash"></i>
+                </span>
             </div>
         </div>
         <div id="option" class="tab-pane fade in active">
