Fix align to left menu block

--- a/popup.html
+++ b/popup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/popup.css">
-    <title>Http Block</title>
+    <title>Mini tool</title>
 </head>
 <body>
 <div class="container panel panel-primary">
@@ -46,23 +46,23 @@
                 </div>
                 <span id="seenChat" class="checkbox btn btn-success">
                     <i class="col-xs-2 glyphicon glyphicon-check"></i>
-                    <span class="text-left">Block the "seen" of Messenger</span>
+                    <span>Block the "seen" of Messenger</span>
                 </span>
                 <span id="typingChat" class="checkbox btn btn-success">
                     <i class="col-xs-2 glyphicon glyphicon-check"></i>
-                    <span class="text-left">Block the typing indicator of Messenger</span>
+                    <span>Block the typing indicator of Messenger</span>
                 </span>
                 <span id="typingPost" class="checkbox btn btn-success">
                     <i class="col-xs-2 glyphicon glyphicon-check"></i>
-                    <span class="text-left">Block the typing indicator on Post</span>
+                    <span>Block the typing indicator on Post</span>
                 </span>
                 <span id="stopTimeline" class="checkbox btn btn-success">
                     <i class="col-xs-2 glyphicon glyphicon-check"></i>
-                    <span class="text-left">Stop your timeline</span>
+                    <span>Stop your timeline</span>
                 </span>
                 <span id="stopGroup" class="checkbox btn btn-success">
                     <i class="col-xs-2 glyphicon glyphicon-check"></i>
-                    <span class="text-left">Stop Feed in your Groups</span>
+                    <span>Stop Feed in your Groups</span>
                 </span>
             </div>
         </div>
