--- a/frame.html
+++ b/frame.html
@@ -1,4 +1,4 @@
-<iframe id="myIframe" width="854" height="480" src="" frameborder="0" allowfullscreen></iframe>
+<iframe id="myFrame" width="854" height="480" src="" frameborder="0" allowfullscreen></iframe>
 <div class="controller">
     <div class="btn-group">
         <button class="reSize">
