Change: fix typo.

--- a/src/popup.html
+++ b/src/popup.html
@@ -13,7 +13,7 @@
         <tab name="Option Facebook">
             <div class="groups-addon">
                 <span type="button" class="item-addon remove">↺</span>
-                <input type="text" id="ringtone" class="item-addon field" v-model="ringtone"
+                <input type="text" id="ringtone" class="item-addon field" v-model="ringTone"
                        title="Url to your ringtone">
                 <span type="button" class="item-addon item-addon button success">➣</span>
             </div>
