--- a/src/newTab.html
+++ b/src/newTab.html
@@ -1,32 +1,21 @@
 <html>
-<head>
-    <title>Digital Clock</title>
-    <link rel="stylesheet" href="./css/newTab.css">
+<head><title>Digital Clock</title>
+    <link rel="stylesheet" href="css/new-tab.css">
 </head>
-
 <body>
-<div id="clock-panel">
-
-    <table class="tabBlock" align="center" cellspacing="0" cellpadding="0" border="0">
-        <tr>
-            <td class="clock" id="dc"></td>
-            <td>
-                <table cellpadding="0" cellspacing="0" border="0">
-
-                    <tr>
-                        <td class="clock-lg" id="dc_hour"></td>
-                    </tr>
-
-                    <!-- SHOWING SECONDS. -->
-                    <tr>
-                        <td class="clock-lg" id="dc_second"></td>
-                    </tr>
-                </table>
-            </td>
-        </tr>
-    </table>
+<div id="clock" class="light">
+    <div class="display">
+        <div class="weekdays"></div>
+        <div class="am-pm"></div>
+        <div class="digits"></div>
+    </div>
 </div>
-</body>
 
+<div class="button-holder">
+    <a class="button">Switch Theme</a>
+</div>
+<!-- JavaScript Includes -->
+<script src="./js/jquery.js"></script>
 <script src="./js/newTab.js"></script>
+</body>
 </html>
